using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Platformer2d.Utils
{
    internal static class GameConstantsForAnimation 
    {
        public const string IsMoving = "isMoving";
        public const string IsRunning = "isRunning";
        public const string IsGrounded = "isGrounded";
        public const string yVelocity = "yVelocity";
        public const string JumpTrigger = "jumpTrigger";
        public const string IsOnWall = "isOnWall";
        public const string IsOnCeiling = "isOnCeiling";
        public const string AttackTrigger = "attack";
        public const string CanMove = "canMove";
        public const string HasTarget = "hasTarget";
        public const string IsAlive = "isAlive";
        public const string LockVelocity = "lockVelocity";
        public const string HitTrigger = "hitTrigger";
        public const string AttackCooldown = "attackCooldown";
        public const string RangedAttackTrigger = "rangedAttack";

    }
}
